# tensix-std

./: Cargo.toml  build.rs
crates/bh_assembly/: Cargo.toml
crates/bh_assembly/src/: asm.rs  cfg.rs  cfg_defs.rs  lib.rs  math.rs  noc.rs  noc_map.rs  pack.rs  sync.rs  tensix_defs.rs  unpack.rs
crates/bh_assembly/src/cfg/: addr.rs  pc_reset.rs
crates/bh_assembly/src/pack/: hw_workarounds.rs
crates/bh_assembly/src/unpack/: hw_workarounds.rs
crates/gs_assembly/: Cargo.toml
crates/gs_assembly/src/: asm.rs  cfg.rs  cfg_defs.rs  lib.rs  math.rs  noc.rs  noc_map.rs  pack.rs  sync.rs  tensix_defs.rs  unpack.rs
crates/gs_assembly/src/cfg/: addr.rs  pc_reset.rs
crates/gs_assembly/src/math/: fpu.rs
crates/runtime/: Cargo.toml
crates/runtime/macros/: Cargo.toml
crates/runtime/macros/src/: lib.rs
crates/runtime/src/: asm.rs  lib.rs
crates/wh_assembly/: Cargo.toml
crates/wh_assembly/src/: asm.rs  cfg.rs  cfg_defs.rs  lib.rs  math.rs  noc.rs  noc_map.rs  pack.rs  tensix_defs.rs  unpack.rs
crates/wh_assembly/src/cfg/: addr.rs
crates/wh_assembly/src/unpack/: hw_workarounds.rs
src/: lib.rs  reset.rs
target_def/: tensix-blackhole.x  tensix-grayskull.x  tensix-wormhole.x  tensix.x
